--- a/src/index.css
+++ b/src/index.css
@@ -62,13 +62,17 @@
 .blog-details div {
   margin: 20px 0;
 }
-.blog-details button {
+/* .blog-details button {
   background: #f1356d;
   color: #fff;
   border: 0;
   padding: 8px;
   border-radius: 8px;
   cursor: pointer;
+} */
+
+.blog-details button {
+  margin-left: 50px;
 }
 
 /* create new blog form */
